tests/NormalTests/paczka1/fuzzy1/58678688.err
Error in line 2: j1zhaMzjhr A802 9,1
Error in line 1: s6bHsZ7l0rr A929 93,4
Error in line 7: s6bHsZ7l0rr S137 86,4
Error in line 18: XZWp4LY A802 74,92
Error in line 32: XZWp4LY A802 309,4
Error in line 39: XZWp4LY S137 131,61
